--- a/VideoFrameTextEditor/style.css
+++ b/VideoFrameTextEditor/style.css
@@ -20,60 +20,96 @@ body{
     margin: 50px 0 50px 50px;
 }
 
+#paragraph-input-section{
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 485px;
+    background: #999;
+    border-top: solid #999 5px;
+    border-right: solid #999 5px;
+    border-bottom: solid #999 2px;
+    padding-top: 10px;
+}
+
+.paragraph-input{
+    height: fit-content;
+    width: fit-content;
+    padding: 5px;
+    margin: 0 auto 30px auto;
+    display: block;
+    background: #444;
+}
+
 #input-heading{
     margin-top: 3px;
 }
 
 .input-extra input{
-    width: 400px;
-    border: solid #999 5px;
+    width: 244px;
+    border: solid #444 5px;
     border-radius: 5px;
     text-align: center;
     padding: 5px 0;
-    margin-top: 5px;
+    margin: 10px 20%;
 }
 
 .controll-section{
-    display: block;
-    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 240px;
     height: fit-content;
-    margin-bottom: 10px;
+    margin: 10px auto;
+    padding: 5px;
     background: white;
-    border: solid #999 5px;
+    border: solid black 5px;
     border-radius: 5px;
 }
 
-.col{
-    display: inline-block;
-}
-
-.box input[type=number]{
+.controll-section input[type=number]{
     width: 40px;
     text-align: center;
     margin: 5px 0px 5px 5px;
     padding: 2px 0;
-    cursor: pointer;
-    border: none;
-    border-right: solid #999 1px;
+    display: inline-block;
+    /* border-right: solid #999 1px; */
 }
 
-.box input[type=text]{
+.controll-section input[type=text]{
     width: 120px;
     text-align: left;
     margin: 5px 0px 5px 5px;
     padding: 2px 2px;
-    cursor: pointer;
+    display: inline-block;
+    /* border-right: solid #999 1px; */
+}
+
+#font-color{
+    width: 30px;
     border: none;
-    border-right: solid #999 1px;
+    margin: 5px auto 0 auto;
+    padding-top: 5px;
+    background: white;
+    display: inline-block;
 }
 
 .controll-button{
     padding: 2px 5px;
-    margin: 5px 0px 5px 3px;
+    margin: 5px auto 5px auto;
     cursor: pointer;
     border: none;
-    border-right: solid #999 1px;
+    /* border-right: solid #999 1px; */
     background: white;
+    display: inline-block;
+}
+
+.controll-button:hover{
+    background: #40576d1a;
+}
+
+.controll-button:active{
+    background: #73b1e333;
+    color: #5271ff;
 }
 
 .controll-section span{
@@ -89,43 +125,69 @@ i{
 }
 
 #font-highlight span{
-    background: yellow;
+    background: rgb(255, 242, 140);
     padding: 1px 5px;
 }
 
 #font-outline{
-    text-shadow: 0 0 2px #FF0000;
+    text-shadow: 0 0 2px #ff005d;
 }
 
 #font-shadow{
-    text-shadow: 1px 1px 3px #454545;
+    text-shadow: 1px 1px 3px #215271;
 }
 
-textarea{
-    width: 203px;
-    height: 304px;
-    margin: 5px auto 10px auto;
+#font-blurred {
+    color: rgba(0, 0, 0, 0.2);
+    text-shadow: 0 0 5px black;
+ }
+
+.text-input{
+    width: 244px;
+    height: 100px;
+    display: block;
+    margin: 10px auto 10px auto;
+    padding: 5px;
     border-radius: 5px;
     border: solid #999 5px;
     background: white;
     box-shadow: #00000059 0px 5px 15px;
 }
 
-.visible{
+/* .visible{
     display: block;
-}
+} */
 
 .hidden{
     display: none;
 }
 
 #toggle-cover-text{
-    width: 60%;
-    padding: 5px 0;
-    margin: 10px 20%;
+    width: fit-content;
+    padding: 5px;
+    margin: 10px auto;
+    display: block;
     text-align: center;
+    background: rgb(213, 241, 241);
     border: solid black 5px;
     border-radius: 5px;
+    cursor: pointer;
+}
+
+#add-paragraph{
+    width: fit-content;
+    padding: 5px;
+    display: block;
+    margin: 10px auto;
+    text-align: center;
+    background: rgb(213, 241, 241);
+    border: solid black 5px;
+    border-radius: 5px;
+    cursor: pointer; 
+}
+
+.giant-text{
+    font-size: 32px;
 }
 
 .heading-wrapper{
@@ -165,27 +227,27 @@ h2{
     grid-column: 5 / span 6;
     grid-row: 1;
     z-index: 2;
-    transform: rotate(8deg);
+    transform: rotate(2deg);
     box-shadow: 2px 8px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border: solid 1px black;
-    margin: 100px 60px 0 auto;
+    margin: 50px 30px 0 auto;
 }
 
 
 .tablet-small{
-    width: 225px;
-    height: 345px;
+    width: 270px;
+    height: 414px;
 }
 
-#page{    
+#tablet-screen{    
     margin: 15px auto auto auto;
     border-radius: 5px;
     background: white;
 }
 
 .page-small{
-    width: 203px;
-    height: 304px;
+    width: 244px;
+    height: 365px;
 }
 
 #download-button{
@@ -194,7 +256,8 @@ h2{
     border-radius: 5px;
     height: fit-content;
     width: fit-content;
-    background: rgb(166, 255, 254)
+    background: rgb(166, 255, 254);
+    cursor: pointer;
 }
 
 .background-option-section{
@@ -222,26 +285,41 @@ h2{
     margin: 10px auto 20px auto;
     width: fit-content;
     height: fit-content;
-    display: inline-block;
+    display: block;
     background: none;
     border: none;
+    cursor: pointer;
 }
 
-#own-background{
+#own-background-section{
+    width: 100%;
+}
+
+.own-url{
     width: 280px;
     height: fit-content;
-    margin: 10px 5%;
+    margin: 10px auto;
     padding: 10px 5px;
     border: solid black 2px;
     border-radius: 5px;
+    display: block;
 }
 
-#add-own-background{
+.own-url-submit{
     width: 20%;
     padding: 5px 0;
+    background: rgb(213, 241, 241);
     border: solid black 2px;
     border-radius: 5px;
     margin: 0 40%;
+    cursor: pointer;
+}
+
+.background-option input[type=color]{
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    padding: 10px;
 }
 
 .background-sample{
