--- a/VideoFrameTextEditor/style.css
+++ b/VideoFrameTextEditor/style.css
@@ -171,6 +171,15 @@ body{
     color: #5271ff;
 }
 
+.grayed-out{
+    /* width: fit-content; */
+    background: rgb(228, 228, 228);
+    padding: 1px 2px;
+    margin: 5px auto 5px auto;
+    display: inline-block;
+    font-size: 14px;
+}
+
 /* .controll-section span{
     font-size: 16px;
 } */
@@ -192,10 +201,10 @@ i{
     text-shadow: 1px 1px 3px #215271;
 } */
 
-#font-blurred {
+/* #font-blurred {
     color: rgba(0, 0, 0, 0.2);
     text-shadow: 0 0 5px black;
- }
+ } */
 
 .text-input{
     width: 330px;
