--- a/VideoFrameTextEditor/style.css
+++ b/VideoFrameTextEditor/style.css
@@ -28,25 +28,6 @@ body{
     box-shadow: 0px 0px 8px black;
 }
 
-.color-picker{
-    position: absolute;
-    top: 40%;
-    left: 20%;
-    background: rgb(214, 214, 214);
-    padding: 10px;
-    border: solid #777 5px;
-    border-radius: 5px;
-    z-index: 3;
-    box-shadow: 0px 0px 8px black;
-}
-
-.color-picker input{
-    width: 20%;
-    height: 30px;
-    display: block;
-    margin: 10px auto;
-}
-
 .background-color-picker input[type=color]{
     width: 20%;
     height: 30px;
@@ -182,9 +163,85 @@ body{
     font-size: 14px;
 }
 
-/* .controll-section span{
-    font-size: 16px;
-} */
+.color-picker{
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    background: rgb(214, 214, 214);
+    padding: 10px;
+    border: solid #777 5px;
+    border-radius: 5px;
+    z-index: 3;
+    box-shadow: 0px 0px 8px black;
+    width: 250px;
+}
+
+.color-picker h3{
+    text-align: center;
+}
+
+.color-picker input{
+    width: 20%;
+    height: 30px;
+    display: block;
+    margin: 10px auto;
+}
+
+.set-button{
+    background-color: rgb(213, 241, 241);
+    padding: 5px 0;
+    cursor: pointer;
+}
+
+.remove-button{
+    background-color: rgb(234, 234, 234);
+    padding: 5px 0;
+    cursor: pointer;
+}
+
+.close-button{
+    background-color: rgb(247, 212, 212);
+    padding: 5px 0;
+    cursor: pointer;
+}
+
+.first-of-two{
+    width: 40%;
+    margin: 10px 5%;
+}
+
+.second-of-two{
+    width: 40%;
+    margin: 10px 2%;
+}
+
+.first-of-three{
+    width: 30%;
+    margin: 10px 2%;
+    vertical-align: middle;
+    padding: 5px;
+}
+
+.second-two{
+    width: 25%;
+    margin: 10px 2%;
+    vertical-align: middle;
+    padding: 5px;
+}
+
+#outline-picker-0 input[type=color]{
+    width: 20%;
+    display: inline-block;
+    margin: 10px 0 10px 20%;
+    vertical-align: middle;
+}
+
+#outline-picker-0 input[type=number]{
+    width: 20%;
+    display: inline-block;
+    margin: 10px 30px 10px 15%;
+    vertical-align: middle;
+}
 
 i{
     font-size: 16px;
@@ -192,21 +249,7 @@ i{
 
 #font-highlight{
     padding: 2px 0;
-    /* background: #f1f19c; */
 }
-
-/* #font-outline{
-    text-shadow: 0 0 2px #ff005d;
-} */
-
-/* #font-shadow{
-    text-shadow: 1px 1px 3px #215271;
-} */
-
-/* #font-blurred {
-    color: rgba(0, 0, 0, 0.2);
-    text-shadow: 0 0 5px black;
- } */
 
 .text-input{
     width: 330px;
@@ -362,38 +405,6 @@ h2{
 .underline{
     text-decoration: underline;
 }
-
-/* .Arial{
-    font-family: 'Arial', sans-serif;
-}
-
-.Verdana{
-    font-family: 'Verdana', sans-serif;
-}
-
-.Tahoma{
-    font-family: 'Tahoma', sans-serif;
-}
-
-.Trebuchet{
-    font-family: '.Trebuchet', sans-serif;
-}
-
-.Times-New-Roman{
-    font-family: '.Times-New-Roman', serif;
-}
-
-.Georgia{
-    font-family: '.Georgia', serif;
-}
-
-.Garamond{
-    font-family: 'Garamond', serif;
-}
-
-.Courier-New{
-    font-family: 'Courier New', monospace;
-} */
 
 #download-button{
     margin: 20px 50px 0 0;
@@ -613,16 +624,4 @@ h2{
     background-image: url("img/blackRainBackground.jpg");
     background-size: cover;
     padding: 20px 0 20px 0;
-}
-
-.button-set{
-    background-color: rgb(213, 241, 241);
-    margin: 10px 0 10px 10%;
-    cursor: pointer;
-}
-
-.button-close{
-    background-color: rgb(247, 212, 212);
-    margin: 10px 0 10px 10%;
-    cursor: pointer;
 }
